Update Jena providers for fix creation JenaException, clear code